# productai

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  productai.db  productai.service  pyproject.toml  run.sh
.serena/: project.yml
productai/: app.py
productai/ai/: autocomplete.py  prompts.py  service.py
productai/db/: models.py  schema.py
productai/db/migrations/: 001_initial_schema.sql  002_seed_settings.sql  003_seed_demo_data.sql  004_expand_versions_entity_type.sql  005_seed_demo_versions.sql  006_create_projects.sql
productai/routes/: api.py  pages.py
productai/templates/: base.html
productai/templates/pages/: admin.html  analytics.html  dashboard.html  mindmap.html  plan_chat.html  plan_detail.html  plan_edit.html  prd_chat.html  prd_detail.html  prd_edit.html  project_detail.html  project_edit.html  version_detail.html  versions.html
